--- a/picPicker/src/main/AndroidManifest.xml
+++ b/picPicker/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     <!-- 在SDCard中创建与删除文件权限 -->
     <!-- 往SDCard写入数据权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- 从SDCard读取数据权限 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> <!-- 相机权限 -->
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/><!-- 相机权限 -->
 
     <application>
         <activity
