--- a/picPicker/build.gradle
+++ b/picPicker/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     api('com.github.chrisbanes:PhotoView:2.3.0'){
         exclude group: 'com.android.support'
     }
+    compileOnly "io.reactivex.rxjava2:rxjava:2.2.8"
+    compileOnly "io.reactivex.rxjava2:rxandroid:2.1.1"
 }
